After church service

--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -2,6 +2,26 @@
 	- Maintain list of current projects
 	- Maintain list of todos, scheduled and running tasks
 	- Maintain list of books being read
-- #cci/sunday-service
-	-
+## GO!
+tag:: #cci/sunday-service
+	- We must understand how God expects us to function
+	- Matthew 4:19
+		-
+		  #+BEGIN_QUOTE
+		  Follow me , and I will make you fishers of men
+		  #+END_QUOTE
+		- It depicts a call to maturity
+			- God is more interesting in us than in our needs
+			- Ephesians 14:X
+		- It shows us that we can get better at spiritual things
+			- In the kingdom, things are replicable. If you want it, you can have it.
+			- Luke 11:1-2
+			- Philippians 1 : 45
+		- Whatever else you are good at, bears witness that you can be a good evangelist.
+		- Matthew 10:1, 5 - 17
+		- John 4
+		- We use natural thin8s to explain teh supernatural
+		- My purpose is to know Christ and to make him known
+		-
+		-
 	-
