--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -1,5 +1,6 @@
 - PKM/Workflow
 	- Maintain list of current projects
+		- Add running, halted, finished property
 	- Maintain list of todos, scheduled and running tasks
 	- Maintain list of books being read
 ## GO!
