--- a/journals/2021_09_27.md
+++ b/journals/2021_09_27.md
@@ -1,6 +1,9 @@
-- #me/purchases
+- #my/purchases
 	- TODO Mouse
 	- TODO Divided keyboard
 	- TODO Usb-c to A converter
-	- TODO Smart bulb
+	- TODO Desk lamp and Smart bulb
+	- TODO Raspberry Pi 4
+	-
+	-
 	-
