--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -2,7 +2,7 @@
 	- Maintain list of current projects
 		- Add running, halted, finished property
 		- A project is a page with specific property types and values
-	- Maintain list of todos, scheduled and running tasks
+	- Maintain list of todos, scheduled and running tasks.
 	- Maintain list of books being read
 ## GO!
 tag:: #cci/sunday-service
