Logseq auto save

--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -2,8 +2,9 @@
 	- Maintain list of current projects
 		- Add running, halted, finished property
 		- A project is a page with specific property types and values
-	- Maintain list of todos, scheduled and running tasks.
-	- Maintain list of books being read
+	- Maintain list of todos, scheduled and running tasks. _Anything not connected to projects_
+	-
+		- books will have property values
 ## GO!
 tag:: #cci/sunday-service
 	- We must understand how God expects us to function
