Logseq auto save

--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -3,7 +3,7 @@
 		- Add running, halted, finished property
 		- A project is a page with specific property types and values
 	- Maintain list of todos, scheduled and running tasks. _Anything not connected to projects_
-	-
+	- Maintain list of books being read
 		- books will have property values
 ## GO!
 tag:: #cci/sunday-service
