Logseq auto save

--- a/journals/2021_09_27.md
+++ b/journals/2021_09_27.md
@@ -4,6 +4,6 @@
 	- TODO Usb-c to A converter
 	- TODO Desk lamp and Smart bulb
 	- TODO Raspberry Pi 4
-	- LATER Boohoo.com
+	- LATER www.boohoo.com
 	-
 	-
