Logseq auto save

--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -1,7 +1,6 @@
--
--
-  tags:: #cci/sunday-service
-  tags:: healing
-  title:: Your healing today
+#tags:: #cci/sunday-service
+theme:: healing
+title:: Your healing today
+
 	-
 	-
