Logseq auto save

--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -3,6 +3,6 @@ tags:: #cci/sunday-service
 theme:: healing
 Title:: Your Healing today
 	- God doesn't want us to run with a theology that is inconsistent with his plan
-	-
-	  #
+	- #bible/Psalms/104
+		-
 	-
