Logseq auto save

--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -4,6 +4,7 @@ theme:: healing
 Title:: Your Healing today
 	- God doesn't want us to run with a theology that is inconsistent with his plan
 	- #bible/Psalms/104
-	-
+	- #bible/Romans/8
+		- Verse 32:
 		-
 	-
