Logseq auto save

--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -5,6 +5,8 @@ Title:: Your Healing today
 	- God doesn't want us to run with a theology that is inconsistent with his plan
 	- #bible/Psalms/104
 	- #bible/Romans/8
-		- Verse 32:
+		- Verse 32: He did not spare his own son but delivered him up for us all shall he not freely give use all things
+	-
+	  #
 		-
 	-
