--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -6,7 +6,7 @@ Title:: Your Healing today
 	- #bible/Psalms/104
 	- #bible/Romans/8
 		- Verse 32: He did not spare his own son but delivered him up for us all shall he not freely give use all things
-	-
-	  #
+	- #bible/Phillipians
+		-
 		-
 	-
