Logseq auto save

--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -7,6 +7,6 @@ Title:: Your Healing today
 	- #bible/Romans/8
 		- Verse 32: He did not spare his own son but delivered him up for us all shall he not freely give use all things
 	- #bible/Phillipians
-	- The ministry of Jesus was characterized by healing.
+	- The ministry of Jesus was characterized by healing. 60% of his miracles were his healing.
 		-
 	-
