Logseq auto save

--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -6,7 +6,7 @@
 	- Maintain list of books being read
 		- books will have property values
 ## GO!
-tag:: #cci/sunday-service
+tag:: #cci/services/sundays
 	- We must understand how God expects us to function
 	- Matthew 4:19
 		-
