--- a/journals/2021_10_03.md
+++ b/journals/2021_10_03.md
@@ -1,5 +1,5 @@
 ## Your Healing Today
-tags:: #cci/sunday-service
+tags:: #cci/services/sundays
 theme:: healing
 Title:: Your Healing today
 	- God doesn't want us to run with a theology that is inconsistent with his plan
