Logseq auto save

--- a/journals/2021_10_05.md
+++ b/journals/2021_10_05.md
@@ -1,3 +1,4 @@
+- Devotional
 ## Contend Earnestly
 - Love should be your motivation for contending for the faith.
 - The only way to contend with misconceptions about the gospel is be confronting with God's word
