Logseq auto save

--- a/journals/2021_10_05.md
+++ b/journals/2021_10_05.md
@@ -1,4 +1,4 @@
-- Devotional
+## Devotional
 	- ## Contend Earnestly
 	  tag:: #cci/services/daily
 		- Love should be your motivation for contending for the faith.
