--- a/journals/2021_10_05.md
+++ b/journals/2021_10_05.md
@@ -1,5 +1,6 @@
 ## Devotional
 	- ### Contend Earnestly
 	  tag:: #cci/services/daily
+	  theme:: faith, truthz
 		- Love should be your motivation for contending for the faith.
 		- The only way to contend with misconceptions about the gospel is be confronting with God's word
