--- a/journals/2021_10_06.md
+++ b/journals/2021_10_06.md
@@ -1,5 +1,6 @@
 - #my/accomodation/search
 	- ### Template Message
-		-
-	- https://www.spareroom.co.uk/flatshare/flatshare_detail.pl?flatshare_id=15953759&mode=contact&submode=byemail&flatshare_type=offered&search_id=1074977810&search_results=%2Fflatshare%2F%3Fsearch_id%3D1074977810%26&city_id=10&featured=&alert_id=&alert_type=&upgrade_required=0&
+	-
+	- Manchester
+		- https://www.spareroom.co.uk/flatshare/flatshare_detail.pl?flatshare_id=15953759&mode=contact&submode=byemail&flatshare_type=offered&search_id=1074977810&search_results=%2Fflatshare%2F%3Fsearch_id%3D1074977810%26&city_id=10&featured=&alert_id=&alert_type=&upgrade_required=0&
 	-
