Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -1,7 +1,7 @@
 - #cci/services/sundays
 	- ## The Supply of the Spirit
 	  theme:: Power
-		- ##### #bible/Luke/c5
-		-
+		- ##### #bible/Luke/5
+			-
 		-
 		-
