Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -2,6 +2,9 @@
 	- ## The Supply of the Spirit
 	  theme:: Power
 		- ##### #bible/Luke/5
+			- However, the report went around concerning Him all the more; and great multitudes came together to hear, and to be healed by Him of their infirmities.
+			  Luke 5:15 NKJV
+			  https://bible.com/bible/114/luk.5.15.NKJV
 			-
 		-
 		-
