--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -5,7 +5,7 @@
 			- However, the report went around concerning Him all the more; and great multitudes came together to hear, and to be healed by Him of their infirmities.
 			  Luke 5:15 NKJV
 			  https://bible.com/bible/114/luk.5.15.NKJV
-		- The intelligent creation we see speaks about an intelligent designer, and yet as powerful as that shows his power
+		- The intelligent creation we see speaks about an intelligent designer, and yet as powerful as entails, it is not the greatest
 		-
 		-
 		-
