--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -6,6 +6,7 @@
 			  Luke 5:15 NKJV
 			  https://bible.com/bible/114/luk.5.15.NKJV
 		- The intelligent creation we see speaks about an intelligent designer, and yet as powerful as entails, it is not the greatest act he has carried out.
+		- #bibl3/1Corinthians/15
 		-
 		-
 		-
