Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -7,7 +7,7 @@
 			  https://bible.com/bible/114/luk.5.15.NKJV
 		- The intelligent creation we see speaks about an intelligent designer, and yet as powerful as entails, it is not the greatest act he has carried out.
 		- #bible/1Corinthians/15
-			-
+			- 14: And if not
 		-
 		-
 		-
