--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -10,7 +10,8 @@
 			- **And if Christ is not risen"", then our preaching is empty and your faith is also empty.
 			  I Corinthians 15:14 NKJV
 			  https://bible.com/bible/114/1co.15.14.NKJV
-		- #bible/Acts
+		- #bible/Acts/02
+		-
 		-
 		-
 		-
