Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -7,11 +7,11 @@
 			  https://bible.com/bible/114/luk.5.15.NKJV
 		- The intelligent creation we see speaks about an intelligent designer, and yet as powerful as entails, it is not the greatest act he has carried out.
 		- #bible/1Corinthians/15
-			- **And if Christ is not risen"", then our preaching is empty and your faith is also empty.
+			- **And if Christ is not risen**, then our preaching is empty and your faith is also empty.
 			  I Corinthians 15:14 NKJV
 			  https://bible.com/bible/114/1co.15.14.NKJV
 		- #bible/Acts/02
-		-
+			-
 		-
 		-
 		-
