Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -11,8 +11,8 @@
 			  I Corinthians 15:14 NKJV
 			  https://bible.com/bible/114/1co.15.14.NKJV
 		- #bible/Acts/02
+			- Christ rose so that we will have faith.
 			-
-		-
 		-
 		-
 		-
