--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -12,7 +12,8 @@
 			  https://bible.com/bible/114/1co.15.14.NKJV
 		- #bible/Acts/02
 			- Christ rose so that we will have faith.
-		- With the holy spirit, we have God's agency for change.
+		- With the holy spirit, we have God's agency for change and action.
+		-
 		-
 		-
 		-
