Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -13,6 +13,8 @@
 		- #bible/Acts/02
 			- Christ rose so that we will have faith.
 		- With the holy spirit, we have God's agency for change and action.
+		- Collosiams 01
+		-
 		-
 		-
 		-
