Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -14,7 +14,8 @@
 			- Christ rose so that we will have faith.
 		- With the holy spirit, we have God's agency for change and action.
 		- #bible/Sunday/Collosiams/01
-		-
+		- To Make a healer out of you
+		- To make a healing
 		-
 		-
 		-
