Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -15,7 +15,7 @@
 		- With the holy spirit, we have God's agency for change and action.
 		- #bible/Sunday/Collosiams/01
 		- To Make a healer out of you
-		- To make a healing
+		- To make healing a sustainable process
 		-
 		-
 		-
