--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -16,6 +16,7 @@
 		- #bible/Sunday/Collosiams/01
 		- To Make a healer out of you
 		- To make healing a sustainable process
+		- If we are not flowing in the speir,
 		-
 		-
 		-
