--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -17,7 +17,8 @@
 		- To Make a healer out of you
 		- To make healing a sustainable process
 		- If we are not flowing in the spirit
-		- The display of spiritual gifts is not for the psstids Alot
+		- The display of spiritual gifts is not for the pastorate alone
+		-
 		-
 		-
 		-
