--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -20,8 +20,8 @@
 		- The display of spiritual gifts is not for the pastorate a
 		- Liek4)2 ln MN MN
 		-
-		- 3oheme ln
-		-
+		- Esshpesians/03
+			-
 		-
 		-
 		-
