Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -23,6 +23,6 @@
 			- Blessed be the God and Father of our Lord Jesus Christ, who has blessed us with every spiritual blessing in the heavenly places in Christ,
 			  Ephesians 1:3 NKJV
 			  https://bible.com/bible/114/eph.1.3.NKJV
-			- The incarnation reaches us what God will do
+		- The incarnation reaches us what God will do.
 		-
 		-
