--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -24,5 +24,6 @@
 			  Ephesians 1:3 NKJV
 			  https://bible.com/bible/114/eph.1.3.NKJV
 		- The incarnation reaches us what God will do.
+		- Jesus is
 		-
 		-
