--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -24,7 +24,7 @@
 			  Ephesians 1:3 NKJV
 			  https://bible.com/bible/114/eph.1.3.NKJV
 		- The incarnation reaches us what God will do.
-		- Jesus is sent us into the world with power, through the holy spirit
+		- Jesus is sent us into the world with power, by the proof of the holy spirit
 		-
 		-
 		-
