--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -25,6 +25,7 @@
 			  https://bible.com/bible/114/eph.1.3.NKJV
 		- The incarnation reaches us what God will do.
 		- Jesus is sent us into the world with power, by the proof of the holy spirit
+		- #bible/Matthew/04
 		-
 		-
 		-
