Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -27,3 +27,4 @@
 		- Jesus is sent us into the world with power, by the proof of the holy spirit
 		- #bible/Matthew/12
 			- 22:
+		- Healing is not always an intentional effort sometimes it's simply
