Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -27,4 +27,5 @@
 		- Jesus is sent us into the world with power, by the proof of the holy spirit
 		- #bible/Matthew/12
 			- 22:
-		- Healing is not always an intentional effort sometimes it's simply
+		- Healing is not always an intentional effort sometimes it's simply the realization of the environment around you
+		-
