Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -28,5 +28,5 @@
 		- #bible/Matthew/12
 			- 22:
 		- Healing is not always an intentional effort sometimes it's simply the realization of the environment around you
+			- #bible/Mark/09
 			-
-			  #
