--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -17,8 +17,7 @@
 		- To Make a healer out of you
 		- To make healing a sustainable process
 		- If we are not flowing in the spirit
-		- The display of spiritual gifts is not for the pastorate a
-		- Liek4)2 ln MN MN
+		- The display of spiritual gifts is not for the pastorate
 		- #bible/Ephesians/03
 			- Blessed be the God and Father of our Lord Jesus Christ, who has blessed us with every spiritual blessing in the heavenly places in Christ,
 			  Ephesians 1:3 NKJV
