--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -17,15 +17,14 @@
 		- To Make a healer out of you
 		- To make healing a sustainable process
 		- If we are not flowing in the spirit
-		- The display of spiritual gifts is not for the pastorate
+		- The display of spiritual gifts is not for the pastorate alone
 		- #bible/Ephesians/03
 			- Blessed be the God and Father of our Lord Jesus Christ, who has blessed us with every spiritual blessing in the heavenly places in Christ,
 			  Ephesians 1:3 NKJV
 			  https://bible.com/bible/114/eph.1.3.NKJV
 		- The incarnation reaches us what God will do.
 		- Jesus is sent us into the world with power, by the proof of the holy spirit
-		- #bible/Matthew/12
-			- 22:
+		- #bible/Matthew/12 veese
 		- Healing is not always an intentional effort sometimes it's simply the realization of the environment around you
 			- #bible/Mark/09
 		-
