--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -24,7 +24,8 @@
 			  https://bible.com/bible/114/eph.1.3.NKJV
 		- The incarnation reaches us what God will do.
 		- Jesus is sent us into the world with power, by the proof of the holy spirit
-		- #bible/Matthew/12 veese
+		- #bible/Matthew/12 verse 22
 		- Healing is not always an intentional effort sometimes it's simply the realization of the environment around you
 			- #bible/Mark/09
 		-
+		  #
