Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -27,5 +27,8 @@
 		- #bible/Matthew/12 verse 22
 		- Healing is not always an intentional effort sometimes it's simply the realization of the environment around you
 			- #bible/Mark/09
-		-
-		  #
+		- #bible/2Corinthians/03
+			- Not that we are sufficient of ourselves to think of anything as being from ourselves, but our sufficiency is from God, who also made us sufficient as ministers of the new covenant, not of the letter but of the Spirit; for the letter kills, but the Spirit gives life.
+			  II Corinthians 3:5‭-‬6 NKJV
+			  https://bible.com/bible/114/2co.3.5-6.NKJV
+			-
