--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -14,8 +14,8 @@
 			- Christ rose so that we will have faith.
 		- With the holy spirit, we have God's agency for change and action.
 		- #bible/Sunday/Collosions/01
-		- Objectives
-		- To Make a healer out of you
+		- ### Objectives
+			- To Make a healer out of you
 		- To make healing a sustainable process
 		- If we are not flowing in the spirit
 		- The display of spiritual gifts is not for the pastorate alone
