--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -16,7 +16,7 @@
 		- #bible/Sunday/Collosions/01
 		- ### Objectives
 			- To Make a healer out of you
-		- To make healing a sustainable process
+			- To make healing a sustainable and  process
 		- If we are not flowing in the spirit
 		- The display of spiritual gifts is not for the pastorate alone
 		- #bible/Ephesians/03
