Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -15,6 +15,7 @@
 		- With the holy spirit, we have God's agency for change and action.
 		- #bible/Sunday/Collosions/01
 		- ### Objectives
+		  background-color:: #978626
 			- To Make a healer out of you
 			- To make healing a sustainable and repeatable process
 		- If we are not flowing in the spirit
