Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -33,4 +33,5 @@
 			- Not that we are sufficient of ourselves to think of anything as being from ourselves, but our sufficiency is from God, who also made us sufficient as ministers of the new covenant, not of the letter but of the Spirit; for the letter kills, but the Spirit gives life.
 			  II Corinthians 3:5‭-‬6 NKJV
 			  https://bible.com/bible/114/2co.3.5-6.NKJV
-			-
+		- Many people are aware of prayer but not many are aware of the supply of the spirit of God
+		-
