--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -34,4 +34,5 @@
 			  II Corinthians 3:5‭-‬6 NKJV
 			  https://bible.com/bible/114/2co.3.5-6.NKJV
 		- Many people are aware of prayer but not many are aware of the supply of the spirit of God
-		-
+		- Cultivating the environment of the spirit
+			-
