Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -35,4 +35,5 @@
 			  https://bible.com/bible/114/2co.3.5-6.NKJV
 		- Many people are aware of prayer but not many are aware of the supply of the spirit of God
 		- Cultivating the environment of the spirit
-			-
+			- Prayer
+			- The word of God
