Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -17,7 +17,7 @@
 		- #bible/Acts/02
 			- Christ rose so that we will have faith.
 		- With the holy spirit, we have God's agency for change and action.
-		- #bible/Sunday/Collosions/01
+		- #bible/Collosians/01
 		- If we are not flowing in the spirit
 		- The display of spiritual gifts is not for the pastorate alone
 		- #bible/Ephesians/03
