--- a/journals/2021_10_12.md
+++ b/journals/2021_10_12.md
@@ -1,8 +1,8 @@
-#
-- Miracles are not designed to replace the supernatural
-- #bible/James/02
-	- What does it profit, my brethren, if someone says he has faith but does not have works? Can faith save him? If a brother or sister is naked and destitute of daily food, and one of you says to them, “Depart in peace, be warmed and filled,” but you do not give them the things which are needed for the body, what does it profit?
-	  James 2:14‭-‬16 NKJV
-	  https://bible.com/bible/114/jas.2.14-16.NKJV
+- #cci/biblestudy
+	- Miracles are not designed to replace the supernatural
+	- #bible/James/02
+		- What does it profit, my brethren, if someone says he has faith but does not have works? Can faith save him? If a brother or sister is naked and destitute of daily food, and one of you says to them, “Depart in peace, be warmed and filled,” but you do not give them the things which are needed for the body, what does it profit?
+		  James 2:14‭-‬16 NKJV
+		  https://bible.com/bible/114/jas.2.14-16.NKJV
 - There are somethings needful for the body that even player cannot replace
 -
