Logseq auto save

--- a/journals/2021_10_12.md
+++ b/journals/2021_10_12.md
@@ -5,4 +5,5 @@
 		  James 2:14‭-‬16 NKJV
 		  https://bible.com/bible/114/jas.2.14-16.NKJV
 	- There are somethings needful for the body that even player cannot replace
-	- Miracles as beautiful as they are, won't rsplce
+	- Miracles as beautiful as they are, won't replace the natural things
+	-
