--- a/journals/2021_10_12.md
+++ b/journals/2021_10_12.md
@@ -6,4 +6,5 @@
 		  https://bible.com/bible/114/jas.2.14-16.NKJV
 	- There are somethings needful for the body that even player cannot replace
 	- Miracles as beautiful as they are, won't replace the natural things
+	- What the word of God is to our spirit is what food is to our body.
 	-
