Logseq auto save

--- a/journals/2021_10_12.md
+++ b/journals/2021_10_12.md
@@ -7,4 +7,4 @@
 	- There are somethings needful for the body that even player cannot replace
 	- Miracles as beautiful as they are, won't replace the natural things
 	- What the word of God is to our spirit is what food is to our body.
-	- What prayer is to our
+	- What prayer is to our spirit is what exercise is to oiyt
