--- a/journals/2021_10_13.md
+++ b/journals/2021_10_13.md
@@ -1,7 +1,7 @@
 - #my/devices/pi Raspberry Pi setup
 	- Git
-	- Anaconda
-	- Vscode
+	- DONE Anaconda
+	- DONE Vscode
 	- Edge
 	- OneDrive + Google drive
 	- NAS software
