Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -2,7 +2,7 @@
 	- ## The Supply of the Spirit
 	  theme:: power
 		- ### Objectives
-		  background-color:: #978626
+		  background-color:: #497d46
 			- To Make a healer out of you
 			- To make healing a sustainable and repeatable process
 		- ##### #bible/Luke/5
