Logseq auto save

--- a/journals/2021_10_10.md
+++ b/journals/2021_10_10.md
@@ -1,7 +1,7 @@
 - #cci/services/sundays
 	- ## The Supply of the Spirit
 	  theme:: power
-	  background-color:: #497d46
+	  background-color:: #533e7d
 		- ### Objectives
 		  background-color:: #497d46
 			- To Make a healer out of you
