--- a/journals/2021_10_18.md
+++ b/journals/2021_10_18.md
@@ -1,5 +1,5 @@
 - #my/accomodation/search
 	- [Fallowfield 6bed - big room 505pcm](https://www.spareroom.co.uk/flatshare/flatshare_detail.pl?flatshare_id=15388035&mode=contact&submode=bytel&flatshare_type=offered&search_id=1077989407&search_results=%2Fflatshare%2F%3Fsearch_id%3D1077989407%26&city_id=10&featured=&alert_id=&alert_type=&upgrade_required=0&)
 	  id:: 616d1ceb-e716-4939-9f1c-91776753adc5
-		- Splendid living -
+		- Splendid living - 07548102761
 	-
