--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -1,4 +1,6 @@
 ### Podcast
-title: You 2.0 Regrets
-theme: regret, guilt
+title:: You 2.0 Regrets
+name:: Hidden Brain
+theme:: emotion/regret, emotion/guilt
+	- Regret and Guilt are two emotions that may seem hard to distinguish, making them easily conflated.
 -
