Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -2,5 +2,5 @@
 title:: You 2.0 Regrets
 name:: Hidden Brain
 theme:: emotion/regret, emotion/guilt
-	- Regret and Guilt are two emotions that may seem hard to distinguish, making them easily conflated.
+	- Regret and Guilt are two emotions that may seem hard to distinguish, making them easily conflated. It is quite possible for an incident or memory go make
 -
