Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -6,5 +6,6 @@ theme:: emotion/regret, emotion/guilt
 	- Regret is a comparison between something that happened and another more desirable possible occurrence, or lack thereof.
 	- Guilt on the other hand is a comparison between something we did or were involved in and a **personal** set standard for ourselves.
 - PKM
+	- Books Tracker
 	-
 -
