--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -7,5 +7,9 @@ theme:: emotion/regret, emotion/guilt
 	- Guilt on the other hand is a comparison between something we did or were involved in and a **personal** set standard for ourselves.
 - PKM
 	- Books Tracker
+		- Name
+		- Last read
+		- Number of pending todos
+		- Number of highlights
 		-
 -
