Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -11,5 +11,8 @@ theme:: emotion/regret, emotion/guilt
 		- Last read
 		- Number of pending todos
 		- Number of highlights
+		- Number of prioritised highlights
+	- Podcasts
+		- Podcast name
 		-
 -
