Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -14,5 +14,5 @@ theme:: emotion/regret, emotion/guilt
 		- Number of prioritised highlights
 	- Podcasts
 		- Podcast name
-		-
+		- Number of episodes listened
 -
