Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -9,11 +9,11 @@ theme:: emotion/regret, emotion/guilt
 	- Books Tracker
 		- Name
 		- Last read
-		- Number of pending todos
+		- Number of  todos
 		- Number of highlights
 		- Number of prioritised highlights
 	- Podcasts
 		- Podcast name
 		- Number of episodes listened
-		- Number of
+		- Number of todos
 -
