Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -16,5 +16,6 @@ theme:: emotion/regret, emotion/guilt
 		- Podcast name
 		- Number of episodes listened
 		- Number of todos
-		-
+		- Number of highlights
+	-
 -
