Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -17,5 +17,7 @@ theme:: emotion/regret, emotion/guilt
 		- Number of episodes listened
 		- Number of todos
 		- Number of highlights
-	-
+	- Church template
+		- Devotional
+		-
 -
