Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -22,5 +22,6 @@ theme:: emotion/regret, emotion/guilt
 		- Devotional
 		- Sunday service
 		- Morning reflections
-		- Evening reflection
+			-
+		- Evening reflection q
 -
