Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -22,6 +22,12 @@ theme:: emotion/regret, emotion/guilt
 		- Devotional
 		- Sunday service
 		- Morning reflections
-			-
-		- Evening reflection q
+			- What's one thing I should have done?
+			- What's on your mind?
+			- How do you feel?
+		- Evening reflection
+			- What's one thing I should have done?
+			- What's one occurrence I'm grateful for today?
+			- What/who made me happy?
+			- Who do I need
 -
