Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -18,6 +18,10 @@ theme:: emotion/regret, emotion/guilt
 			- Number of episodes listened
 			- Number of todos
 			- Number of highlights
+		- Personal Relationships Tracker
+			- Name
+			- Last contacted
+			-
 	- Church template
 		- Devotional
 		- Sunday service
@@ -29,5 +33,5 @@ theme:: emotion/regret, emotion/guilt
 			- What's one thing I should have done?
 			- What's one occurrence I'm grateful for today?
 			- What/who made me happy?
-			- Who do I need
+			- Who do I need to reach out to
 -
