Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -21,7 +21,8 @@ theme:: emotion/regret, emotion/guilt
 		- Personal Relationships Tracker
 			- Name
 			- Last contacted
-			-
+			- Need to contact flag
+			- Pending
 	- Church template
 		- Devotional
 		- Sunday service
