Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -22,7 +22,7 @@ theme:: emotion/regret, emotion/guilt
 			- Name
 			- Last contacted
 			- Need to contact flag
-			- Pending
+			- Pending discussions
 	- Church template
 		- Devotional
 		- Sunday service
