Logseq auto save

--- a/journals/2021_10_23.md
+++ b/journals/2021_10_23.md
@@ -26,6 +26,7 @@ theme:: emotion/regret, emotion/guilt
 	- Church template
 		- Devotional
 		- Sunday service
+	- Life Journal
 		- Morning reflections
 			- What's one thing I should have done?
 			- What's on your mind?
