--- a/journals/2021_10_25.md
+++ b/journals/2021_10_25.md
@@ -1,4 +1,4 @@
 - Next tasks
 	- Check lower case function
-	- Alternatively, how to confirm if item in list / vector
+	- Alternatively, how to confirm if item in list / vector - for detecting
 	-
