Logseq auto save

--- a/journals/2021_11_03.md
+++ b/journals/2021_11_03.md
@@ -1,4 +1,5 @@
 - House
 	- Is no longer fully bills inclusive?
 	- Meters are in Nicole's room?
+		- What happens if it finishes while she's away?
 	-
