Logseq auto save

--- a/journals/2021_11_03.md
+++ b/journals/2021_11_03.md
@@ -3,4 +3,5 @@
 	- Meters are in Nicole's room?
 		- What happens if it finishes while she's away?
 	- With the rise in gas and electricity prices, when can we make a mental note to top up.
-	- I work from home and wouldn't want to be in a situation where there's a need to
+	- I work from home and wouldn't want to be in a situation where there's a need to top up during the day when Nicole isn't around.
+	-
