Logseq auto save

--- a/journals/2021_11_03.md
+++ b/journals/2021_11_03.md
@@ -1,6 +1,6 @@
 - House
 	- Its no longer fully bills inclusive?
-	- How often now
+	- How often now do you reckon we'll need to top up with the rise in utility prices?
 	- Meters are in Nicole's room?
 		- What happens if it finishes while she's away?
 	- With the rise in gas and electricity prices, when can we make a mental note to top up.
