--- a/journals/2021_11_03.md
+++ b/journals/2021_11_03.md
@@ -1,5 +1,5 @@
 - House
-	-
+	- What happens
 	- Its no longer fully bills inclusive?
 	- How often now do you reckon we'll need to top up with the rise in utility prices?
 	- Meters are in Nicole's room?
