--- a/journals/2021_11_03.md
+++ b/journals/2021_11_03.md
@@ -1,5 +1,6 @@
 - House
-	- I'm quite unfamiliar with the current situation so bear with if Who's expected to top up the
+	- I'm quite unfamiliar with the current situation so bear with if some of my questions may seem basic.
+	- Who's expected to top up the heating bill?
 	- Its no longer fully bills inclusive?
 	- How often now do you reckon we'll need to top up with the rise in utility prices?
 	- Meters are in Nicole's room?
