Logseq auto save

--- a/journals/2021_11_03.md
+++ b/journals/2021_11_03.md
@@ -1,4 +1,4 @@
-- House
+- DONE House
 	- I'm quite unfamiliar with the current situation so bear with if some of my questions may seem basic.
 	- Who's expected to top up the heating bill?
 	- Its no longer fully bills inclusive?
