Logseq auto save

--- a/journals/2021_11_04.md
+++ b/journals/2021_11_04.md
@@ -1,4 +1,5 @@
 - Highways UK
 	- Redflex - lane usage management system
 		- Closed lane detection
-		- Speed, license llat detection
+		- Speed, license
+	-
