Logseq auto save

--- a/journals/2021_11_04.md
+++ b/journals/2021_11_04.md
@@ -2,4 +2,5 @@
 	- Redflex - lane usage management system
 		- Closed lane detection
 		- Speed, license
-	-
+	- Ogier electronics - SVD
+	- Copper consultancy - communications and engagement
