Logseq auto save

--- a/journals/2021_11_04.md
+++ b/journals/2021_11_04.md
@@ -3,4 +3,4 @@
 		- Closed lane detection
 		- Speed, license
 	- Ogier electronics - SVD
-	- Copper consultancy - communications and engagement
+	- Copper consultancy - communications and engagement specialists
