Logseq auto save

--- a/journals/2021_11_04.md
+++ b/journals/2021_11_04.md
@@ -4,4 +4,4 @@
 		- Speed, license
 	- Ogier electronics - SVD
 	- Copper consultancy - communications and engagement specialists
-	-
+	- Ringway + lcrig
