Logseq auto save

--- a/journals/2021_11_04.md
+++ b/journals/2021_11_04.md
@@ -5,4 +5,4 @@
 	- Ogier electronics - SVD
 	- Copper consultancy - communications and engagement specialists
 	- Ringway + lcrig + adept
-		-
+		- AI + reinforcement learning
