Logseq auto save

--- a/journals/2021_11_04.md
+++ b/journals/2021_11_04.md
@@ -6,4 +6,6 @@
 	- Copper consultancy - communications and engagement specialists
 	- Ringway + lcrig + adept
 		- AI + reinforcement learning
+	- Infrakit
+	- Vivacity
 	-
