Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -1,4 +1,5 @@
-- Take Action
-  tags:: [[cci/services/sundays]] 
-  theme:: Action
+### Take Action 
+tags:: [[cci/services/sundays]] 
+theme:: Action
+	-
 	-
