Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -3,5 +3,6 @@ tags:: [[cci/services/sundays]]
 theme:: Action
 title:: Taking Action
 	- #bible/Acts/20
-		- For
+		- For I have not shunned to declare you the whole counsel of God.
+		-
 	-
