Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -4,5 +4,6 @@ theme:: Action
 title:: Taking Action
 	- #bible/Acts/20
 		- For I have not shunned to declare you the whole counsel of God.
-	-
+	- Objectives of Reaching
+		-
 	-
