--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -5,5 +5,5 @@ title:: Taking Action
 	- #bible/Acts/20
 		- For I have not shunned to declare you the whole counsel of God.
 	- Objectives of Reaching
-		-
+		- To reveal to us our responsibility in God's divine mandate
 	-
