Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -6,4 +6,5 @@ title:: Taking Action
 		- For I have not shunned to declare you the whole counsel of God.
 	- Objectives of Reaching
 		- To reveal to us our responsibility in God's divine mandate
+		- To help us see how important
 	-
