--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -4,7 +4,7 @@ theme:: Action
 title:: Taking Action
 	- #bible/Acts/20
 		- For I have not shunned to declare you the whole counsel of God.
-	- Objectives of Reaching
+	- ### Objectives of Teaching
 		- To reveal to us our responsibility in God's divine mandate
-		- To help us see how important
-	-
+		- To help us see how important our participation in the things of God is
+		-
