--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -7,4 +7,4 @@ title:: Taking Action
 	- ### Objectives of Teaching
 		- To reveal to us our responsibility in God's divine mandate
 		- To help us see how important our participation in the things of God is
-		-
+		- To help us
