Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -8,5 +8,5 @@ title:: Taking Action
 		- To help us infuse that same commitment in others
 	- #bible/Acts/20
 		- For I have not shunned to declare you the whole counsel of God.
-	-
-	  #
+	- #bible/Acts/17
+		- Verse 6
