Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -10,4 +10,4 @@ title:: Taking Action
 		- For I have not shunned to declare you the whole counsel of God.
 	- #bible/Acts/17
 		- Verse 6
-			- We see
+			- We see the
