--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -10,4 +10,5 @@ title:: Taking Action
 		- For I have not shunned to declare you the whole counsel of God.
 	- #bible/Acts/17
 		- Verse 6
-			- We see the apostles referred to use people who *
+			- We see the apostles referred to use people who **turned the world upside down**
+			-
