Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -11,4 +11,5 @@ title:: Taking Action
 	- #bible/Acts/17
 		- Verse 6
 			- We see the apostles referred to use people who **turned the world upside down**
+	- #bible/Luke/4
 	-
