Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -13,3 +13,5 @@ title:: Taking Action
 			- We see the apostles referred to use people who **turned the world upside down**
 	- #bible/Luke/4
 		- V18 -
+	- #bible/Matthew/9
+		-
