Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -15,4 +15,4 @@ title:: Taking Action
 		- V18 -
 	- #bible/Matthew/9
 	- #bible/Matthew/19
-		- Men and women our to repent as areukt iif the
+		- Men and women our to repent as arem
