Logseq auto save

--- a/journals/2021_11_07.md
+++ b/journals/2021_11_07.md
@@ -16,5 +16,5 @@ title:: Taking Action
 	- #bible/Matthew/9
 	- #bible/Matthew/19
 		- Men and women our to repent as arem
-	-
-	  #
+	- #bible/1Corinthians/5.
+		-
