Logseq auto save

--- a/journals/2021_11_12.md
+++ b/journals/2021_11_12.md
@@ -17,6 +17,25 @@
 	  Url::
 	  Author::
 	  Date::
+	- - ### Take Action 
+	  	- ### Objectives of Teaching
+	  		- To reveal to us our responsibility in God's divine mandate
+	  		- To help us see how important our participation in the things of God is
+	  		- To help us infuse that same commitment in others
+	  	- #bible/Acts/20
+	  		- For I have not shunned to declare you the whole counsel of God.
+	  	- #bible/Acts/17
+	  		- Verse 6
+	  			- We see the apostles referred to use people who **turned the world upside down**
+	  	- #bible/Luke/4
+	  		- V18 -
+	  	- #bible/Matthew/9
+	  	- #bible/Matthew/19
+	  		- Men and women our to repent as arem
+	  	- #bible/1Corinthians/5.
+	  		- V15
+	  		-
+	-
 - LATER Pedagogy of the Oppressed
 -
 -
