Logseq auto save

--- a/journals/2021_11_12.md
+++ b/journals/2021_11_12.md
@@ -17,6 +17,10 @@
 	  Url::
 	  Author::
 	  Date::
+	- ### Take Action 
+	  tags:: [[cci/services/sundays]] 
+	  theme::
+	  title:: Taking
 	-
 	-
 - LATER Pedagogy of the Oppressed
