Logseq auto save

--- a/journals/2021_11_12.md
+++ b/journals/2021_11_12.md
@@ -17,10 +17,11 @@
 	  Url::
 	  Author::
 	  Date::
-	- ### Take Action 
+	-
+	  ###  
 	  tags:: [[cci/services/sundays]] 
 	  theme::
-	  title:: Taking
+	  title::
 	-
 	-
 - LATER Pedagogy of the Oppressed
