Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -1,4 +1,6 @@
-###  
+###  Brave: Guts, Grace and Glory
 tags:: [[cci/services/sundays]] 
-theme::
+theme:: 
 title::
+	- Notes
+		- Within the confines of salvation, grace is always enough, but in the journey of faith, Grace may not be enough.
