Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -1,7 +1,7 @@
 ###  Brave: Guts, Grace and Glory
 tags:: [[cci/services/sundays]] 
-theme:: 
-title::
+theme:: Courage, Guts
+title:: Brave: Guts, Grace and Glory
 	- Notes
 		- Within the confines of salvation, grace is always enough, but in the journey of faith, Grace may not be enough.
 	-
