Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -4,5 +4,8 @@ theme:: Courage, Guts
 title:: Brave: Guts, Grace and Glory
 	- Notes
 		- Within the confines of salvation, grace is always enough, but in the journey of faith, Grace may not be enough.
-		- Grace gives an ability to labour,
+		- Grace gives an ability to labour, infusing the strength to labour
+	- Objectives
+		- Thank God for supernatural gift in CCI
+		-
 -
