Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -7,5 +7,6 @@ title:: Brave: Guts, Grace and Glory
 		- Grace gives an ability to labour, infusing the strength to labour
 	- Objectives
 		- Thank God for supernatural gift in CCI
-		-
+		- God's can't do much in man if he is not brave
+	-
 -
