--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -8,5 +8,7 @@ title:: Brave: Guts, Grace and Glory
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
-		- Bravery can be taught and Kearnt5
+		- Bravery can be taught and Learnt
+	-
+	  #
 -
