Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -8,7 +8,6 @@ title:: Brave: Guts, Grace and Glory
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
-		- Bravery can be taught and Learnt
+		- Bravery can be taught and learned
 	-
-	  #
 -
