Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -5,7 +5,9 @@ title:: Brave: Guts, Grace and Glory
 	- Notes
 		- Within the confines of salvation, grace is always enough, but in the journey of faith, Grace may not be enough.
 		- Grace gives an ability to labour, infusing the strength to labour
-		-
+		- Successful people are celebrated because not many are brave enough to do what they have done.
+		- Hindrances to Bravery
+			-
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
