Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -7,6 +7,7 @@ title:: Brave: Guts, Grace and Glory
 		- Grace gives an ability to labour, infusing the strength to labour
 		- Successful people are celebrated because not many are brave enough to do what they have done.
 		- Hindrances to Bravery
+			- Our perspective of God
 			-
 	- Objectives
 		- Thank God for supernatural gift in CCI
