Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -7,7 +7,7 @@ title:: Brave: Guts, Grace and Glory
 		- Grace gives an ability to labour, infusing the strength to labour
 		- Successful people are celebrated because not many are brave enough to do what they have done.
 		- Hindrances to Bravery
-			- Our perspective of God. If he realises that God is able
+			- Our perspective of God. If he realises that God is able to do more than
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
