Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -10,7 +10,8 @@ title:: Brave: Guts, Grace and Glory
 			- Our perspective of God:
 				- If he realises that God is able to do more than we can imagine. If we realize that everything we own is God's.
 			- The Opinion of Men
-			- Council uoueslrf befor
+			- Council yourself before anyone cancels you
+			-
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
