Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -11,7 +11,7 @@ title:: Brave: Guts, Grace and Glory
 				- If he realises that God is able to do more than we can imagine. If we realize that everything we own is God's.
 			- The Opinion of Men
 			- Council yourself before anyone cancels you
-			-
+			- Fear of Failure
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
