Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -12,6 +12,7 @@ title:: Brave: Guts, Grace and Glory
 			- The Opinion of Men
 			- Council yourself before anyone cancels you
 			- Fear of Failure
+			- The comfort
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
