--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -13,7 +13,7 @@ title:: Brave: Guts, Grace and Glory
 				- Council yourself before anyone cancels you
 			- Fear of Failure
 			- The comfort zone
-		- Many time
+		- Many times big instructions will not come until the smaller ones have been done.
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
