Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -15,6 +15,8 @@ title:: Brave: Guts, Grace and Glory
 			- The comfort zone
 	- Reasons for Bravery.
 		- Many times big instructions will not come until the smaller ones have been done.
+		- Fear obstructs discernment?
+		-
 	- Objectives
 		- Thank God for supernatural gift in CCI
 		- God's can't do much in man if he is not brave
