Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -22,4 +22,4 @@ title:: Brave: Guts, Grace and Glory
 		- God's can't do much in man if he is not brave
 		- Bravery can be taught and learned
 	- X _
-		- Handle
+		- Handle beavsdy wihb prepars
