Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -21,5 +21,6 @@ title:: Brave: Guts, Grace and Glory
 		- God's can't do much in man if he is not brave
 		- Bravery can be taught and learned
 	- X _
-		- Handle beavsdy wihb prepars
+		- Handle bravery wihb preparation
+		-
 -
