Logseq auto save

--- a/journals/2021_11_12.md
+++ b/journals/2021_11_12.md
@@ -17,8 +17,7 @@
 	  Url::
 	  Author::
 	  Date::
-	-
-	  ###  
+	- ###  Service Title
 	  template:: Sunday service
 	  tags:: [[cci/services/sundays]] 
 	  theme::
